--- a/src/assets/styles/cmps/PlayList.scss
+++ b/src/assets/styles/cmps/PlayList.scss
@@ -1,17 +1,32 @@
 .playlist-container{
+  grid-column: 3/4;
+  grid-row: 2/3;
+  background-color: black;
+  // height: 300px;
+  width: 30vw;
+  max-width: 500px;
+  // bottom: 95px;
+  z-index: 4;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  background-color: $dark-mode-background;
+  border-radius: 10px;
+  
+  @media (max-width:1120px) {
     position: absolute;
-    background-color: black;
-    // height: 300px;
-    // width: 300px;
     right: 0;
     top: 74px;
-    // bottom: 95px;
-    z-index: 5;
-    display: flex;
-    flex-direction: column;
-    padding: 10px;
-    background-color: $dark-mode-background;
-    border-radius: 10px;
+    width: 400px;
+    height: calc(100vh - 270px);
+    
+  }
+  
+  @media (max-width:770px) {
+    width: 300px;
+    height: 430px;
+      
+    }
 
 
     .controller-container{
@@ -117,6 +132,7 @@
             font-size: 16px;
             font-weight: bold;
             color: $white;
+            max-width: 300px;
             // transition: color 0.2s ease;
     
             &.playing {
