--- a/src/assets/styles/cmps/SuggestedStations.scss
+++ b/src/assets/styles/cmps/SuggestedStations.scss
@@ -11,7 +11,7 @@
     flex-wrap: wrap;
     gap: 1em;
     max-width: 100%;
-    height: 265px;
+    height: fit-content;
     overflow: hidden;
     background: linear-gradient(0deg, #191414 20%, 80%, #4a0e8b00 100%);
     overflow-x: auto;
