--- a/src/assets/styles/cmps/SuggestedStations.scss
+++ b/src/assets/styles/cmps/SuggestedStations.scss
@@ -12,7 +12,7 @@
     flex-wrap: wrap;
     gap: 1em;
     max-width: 100%;
-    height: fit-content;
+    height: 265px;
     overflow: hidden;
     @media (max-width:770px) {
         
