--- a/src/assets/styles/cmps/LoadingAnimation.scss
+++ b/src/assets/styles/cmps/LoadingAnimation.scss
@@ -2,6 +2,7 @@
 
 .back-shadow{
   background-color: rgba(0, 0, 0, 0.65);
+  // background-color: rgb(0, 0, 0);
   position: absolute;
   top: 0;
   right: 0;
@@ -28,8 +29,11 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
-    width: 100px;  // Increase the width to scale up
-    height: 80px; // Increase the height to scale up
+    width: 80px;  // Increase the width to scale up
+    height: 50px; // Increase the height to scale up
+    width: fit-content;  // Increase the width to scale up
+    height: fit-content; // Increase the height to scale up
+    gap: 5px;
     position: absolute;
     // top: 50%;
     // left: 58%;
