--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -8,7 +8,7 @@
     justify-items: center;
 
     background-color: $clr4;
-    margin: 0px 0px 0px 1.6rem;
+    margin: 0px 0px 0px 0.8em;
 
     height: 75px;
     background-color:black;
