--- a/src/assets/styles/cmps/AppLibrary.scss
+++ b/src/assets/styles/cmps/AppLibrary.scss
@@ -46,20 +46,99 @@
       font-size: 0.9em;
     }
   }
-
-
-  .plus-icon{
+button{
+  .ai-icon{
     width: 1rem;
     height: 1rem;
-    // margin-right: 0.5rem;
-    // margin-bottom: 0.8rem;
-
-
+  
     color:$grey-light;
+    
+  }
+  &:hover{
+    .ai-icon{
+      
+      color: $green;
+    }
+  }
+  
+}
 
-    &:hover{
-      color:$white;
-      transition: 1s;
+&:hover{
+  color:$white;
+  transition: 1s;
+}
+.plus-icon{
+  width: 1rem;
+  height: 1rem;
+  // margin-right: 0.5rem;
+  // margin-bottom: 0.8rem;
+  
+  color:$grey-light;
+
+
+  }
+
+  .gemini-modal-container{
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 2rem;
+    background-color: $dark-mode-background; // Dark semi-transparent background
+    border-radius: 10px;
+    width: 400px;
+    height: auto;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border: 1px solid $white;
+    color: $white;
+    z-index: 5;
+    span {
+      font-size: 1.5rem;
+      font-weight: bold;
+      margin-bottom: 1rem;
+      color: #fff;
+    }
+  
+    .user-interface {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-top: 15px;
+  
+      input {
+        flex: 1;
+        padding: 10px;
+        font-size: 1rem;
+        color: #fff;
+        background-color: #2a2a2a;
+        border: none;
+        border-radius: 4px;
+        margin-right: 10px;
+        outline: none;
+  
+        &::placeholder {
+          color: #b3b3b3; // Light gray for placeholder text
+        }
+      }
+  
+      button {
+        background-color: $green; // Spotify's signature green
+        color: #fff;
+        border: none;
+        border-radius: 4px;
+        padding: 10px 20px;
+        cursor: pointer;
+        font-size: 1rem;
+        transition: background-color 0.3s ease;
+  
+        &:hover {
+          background-color: #17a347; // Darker green on hover
+        }
+      }
     }
   }
 
