--- a/src/assets/styles/cmps/EditOptions.scss
+++ b/src/assets/styles/cmps/EditOptions.scss
@@ -30,7 +30,8 @@
   
       span {
         margin-left: 10px;
-        font-size: 16px;
+        font-size: 0.8em;
+        font-family: 'GothamLight';
       }
   
       svg {
@@ -68,6 +69,8 @@
     position: absolute;
     // display: none;
     z-index: 50;
+    font-size: 0.8em;
+    font-family: 'GothamLight';
 
     &:hover{
       display: block;
@@ -89,6 +92,12 @@
         border-radius: 5px;
         width: 50px;
         height: 50px;
+      }
+      span{
+
+        text-wrap: wrap;
+
+        padding: 0.5em;
       }
     }
 
