Add dragged class

--- a/src/assets/styles/cmps/AppLibrary.scss
+++ b/src/assets/styles/cmps/AppLibrary.scss
@@ -411,3 +411,8 @@ border-radius: 0.5rem;
     }
   }
 }
+
+.dragged{
+  background-color: rgba(123, 123, 123, 0.856);
+  border-bottom: 2px solid $green;
+}
