Add ItemPlay cmp

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -64,6 +64,7 @@
 @import "cmps/SuggestedArtists.scss";
 @import "pages/ArtistDetails.scss";
 @import "cmps/PlayList.scss";
+@import "cmps/ItemPlay.scss";
 
 
 @import "basics/layout";
