Add GeminiChat page instead of modal

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -65,6 +65,7 @@
 @import "pages/ArtistDetails.scss";
 @import "cmps/PlayList.scss";
 @import "cmps/ItemPlay.scss";
+@import "pages/GeminiChat.scss";
 
 
 @import "basics/layout";
