--- a/src/assets/styles/cmps/AppFooter.scss
+++ b/src/assets/styles/cmps/AppFooter.scss
@@ -3,15 +3,10 @@
     bottom: 0px;
     left: 0px;
     right: 0px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    grid-column: 1 / -1;
-    min-height: 3.5rem;
+ 
 
+    // padding: rem(10px) 1rem;
 
-    padding: rem(10px) 1rem;
-    background-color: $clr4;
 
     p {
         margin: 0;
