--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -17,6 +17,13 @@
         color: white;
         // font-size: 1.5em;
     }
+
+    .ai-button{
+        @media (min-width:768px) {
+            display: none;
+            
+        }
+    }
     
     nav {
         display: flex;
