--- a/src/assets/styles/cmps/AppLibrary.scss
+++ b/src/assets/styles/cmps/AppLibrary.scss
@@ -61,6 +61,7 @@ button{
     }
   }
   
+  margin: 0px;
 }
 
 &:hover{
@@ -72,7 +73,6 @@ button{
   height: 1rem;
   // margin-right: 0.5rem;
   // margin-bottom: 0.8rem;
-  
   color:$grey-light;
 
 
