music and podcast now render inside SearchDynamicCmp with their corresponding tags

--- a/src/assets/styles/cmps/SuggestedStations.scss
+++ b/src/assets/styles/cmps/SuggestedStations.scss
@@ -11,6 +11,7 @@
     max-width: 100%;
     height: fit-content;
     overflow: hidden;
+    padding-left: 2.4rem;
     @media (max-width:770px) {
         
         // height: calc(50vw);
