--- a/src/assets/styles/cmps/SearchDynamicCmp.scss
+++ b/src/assets/styles/cmps/SearchDynamicCmp.scss
@@ -7,8 +7,7 @@
 
 .main-search-container {
   display: grid;
-
-  grid-template-rows: 15rem 1fr;
+  grid-template-rows: 12rem 1fr 1fr 1fr;
   border-radius: 0.5rem;
   height: fit-content;
 
@@ -19,15 +18,15 @@
 
     h1 {
       padding-top: 2rem;
-      padding-left: 0.5rem;
-      background: linear-gradient(180deg, rgba(32, 26, 23, 0.5) 0%, rgba(30, 24, 20, 0.5) 50%, rgb(30, 22, 18 , 0.5) 100%);
+      padding-left: 3rem;
+      background: linear-gradient(180deg, rgba(32, 26, 23, 0.5) 0%, rgba(30, 24, 20, 0.5) 50%, rgb(30, 22, 18, 0.5) 100%);
 
       margin-bottom: 0;
-      
+
     }
-    
+
     .gradient {
-      background: linear-gradient(180deg, rgb(33, 22, 18 , 0.5) 0%, rgba(30, 24, 20, 0.5) 25%, #121212 50%);
+      background: linear-gradient(180deg, rgb(33, 22, 18, 0.5) 0%, rgba(30, 24, 20, 0.5) 25%, #121212 50%);
     }
   }
 
@@ -82,6 +81,57 @@
   }
 }
 
-.discover-new-music .h1{
+.sub-categories-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1em;
+  list-style: none;
+  padding: 0;
+  width: 100%;
 
+
+  a {
+    flex-grow: 1;
+    flex-basis: calc(20% - 1em);
+    min-width: 220px;
+    min-height: 120px;
+    max-width: 300px;
+    max-height: 150px;
+    height: 15vw;
+
+
+    li {
+      height: 100%;
+      width: 100%;
+      border-radius: 8px;
+      padding: 1rem;
+      display: flex;
+      justify-content: left;
+      align-items: start;
+      background-color: #282828;
+      color: white;
+      font-weight: bold;
+      text-align: center;
+      transition: transform 0.3s ease, background-color 0.3s ease;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    }
+  }
+}
+
+.sub-categories-container {
+  grid-row: 3/4;
+}
+
+
+
+.gradient {
+  background: linear-gradient(180deg, rgb(33, 22, 18, 0.5) 0%, rgba(30, 24, 20, 0.5) 25%, #121212 50%);
+}
+
+.music-podcast-playlist-container {
+  h1 {
+    padding-top: 2rem;
+    padding-left: 3rem;
+    margin-bottom: 0;
+  }
 }
