Clear console logs and unused files

--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -173,6 +173,7 @@
                         display: flex;
                         align-items: center;
                         position: relative;
+                        width: 25px;
                       svg{
                         height: 25px;
                       }
