--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -174,6 +174,7 @@
                         align-items: center;
                         position: relative;
                         width: 25px;
+                        font-size: 1.5em;
                       svg{
                         height: 25px;
                       }
@@ -270,7 +271,7 @@
 }
 
 .user-container{
-    // margin-inline-end: 0.5em;
+    margin-inline-end: 0.5em;
     cursor: pointer;
     display: flex;
     align-items: center;
